# FinancialAnalyst.ai

./: .env.example  .gitignore  README.md  analyst.py  pyproject.toml  requirements.txt
